<resources>
    <!-- Standard strings used in the app. -->
    <string name="search">Search for an Artist</string>
    <string name="radius">Set radius to search within: </string>
    <string name="radius_hint">Infinite</string>

    <!-- Menu items. -->
    <string name="settings">Settings</string>
    <string name="saved_events">Saved Events</string>

    <!-- App title and logo. -->
    <string name="app_name">Concertify</string>
    <string name="Co">Co</string>
    <string name="nc">nc</string>
    <string name="er">er</string>
    <string name="ti">ti</string>
    <string name="fy"> fy</string>
    <string name="f"/>
    <string name="o"/>
    <string name="slogan">Concerts on the go</string>

    <!-- Button descriptions. -->
    <string name="toggleable">This button toggles the expandable layout.</string>
    <string name="save_button">This button saves an event to a local database.</string>
    <string name="play_button">This button plays a 30 sec demo of the artist\'s top track.</string>

    <!-- Feedback and FAQ -->
    <string name="feedback">Hello! Thank you for using our app. We\'re currently still adding new features and making improvements as time goes on so if you\'ve been enjoying the app so far then stay tuned for more updates and goodies. If you have any feedback to give us please send an email to edmunddao@gmail.com or to nicksaric@gmail.com.</string>
    <string name="title_activity_test">test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
