<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/top_margin"
    android:paddingLeft="@dimen/bottom_margin"
    android:paddingRight="@dimen/bottom_margin"
    android:paddingTop="@dimen/top_margin"
    tools:context="musicfo.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radius"/>

        <EditText
            android:id="@+id/radius_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/radius_hint"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback" />
</LinearLayout>
